2004-07-28  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/forms.c (fl_prepare_form_window): correct typo in
	error message.

2004-06-04  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/fonts.c (fl_try_get_font_struct): change an error message to
	an informational one as the function is often used to test
	whether a font is loadable or not.

2004-06-03  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/Makefile.am (EXTRA_DIST): distribute dirent_vms.h and
	vms_readdir.c.

2004-06-01  Duncan Simpson  <dps@simpson.demon.co.uk>

	* fdesign/fd_printC.c (build_fname): re-write using fl_snprintf
	as a simpler and safer replacement for strncat and strncpy.

2004-05-27  Angus Leeming  <angus.leeming@btopenworld.com>

	* fdesign/fd_printC.c (build_fname): if no output_dir is specified,
	then output files in the current directory.

2004-05-27  Angus Leeming  <angus.leeming@btopenworld.com>

	* fdesign/fd_main.c: improve diagnostics when failing to convert
	the .fd file to a .[ch] pair.
	Also remove some redundant cruft.

2004-05-18  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/include/Basic.h (fl_set_err_logfp): function was known as
	'fl_set_error_logfp' in XForms 0.89. Define a typedef to map
	from the old to the new.

2004-05-18  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/demo27.c:
	* demos/iconify.c:
	* demos/pup.c:
	* fdesign/fd_attribs.c:
	* fdesign/fd_main.c:
	* fdesign/fd_main.h:
	* fdesign/fd_rubber.c:
	* gl/glcanvas.c:
	* image/flimage.h:
	* image/flimage_int.h:
	* image/image.c:
	* image/image_disp.c:
	* image/image_fits.c:
	* image/image_gif.c:
	* image/image_jquant.c:
	* image/image_marker.c:
	* image/image_proc.c:
	* image/image_xwd.c:
	* image/matrix.c:
	* lib/asyn_io.c:
	* lib/canvas.c:
	* lib/child.c:
	* lib/choice.c:
	* lib/flcolor.c:
	* lib/flinternal.h:
	* lib/flresource.c:
	* lib/forms.c:
	* lib/fselect.c:
	* lib/input.c:
	* lib/listdir.c:
	* lib/menu.c:
	* lib/objects.c:
	* lib/pixmap.c:
	* lib/win.c: